--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="scss/style.css">
 
+        <script src="https://kit.fontawesome.com/2aa7d080bb.js" crossorigin="anonymous"></script>
+
        
     </head>
     <body>
@@ -18,47 +20,70 @@
             
             <!-- HEADER -->
             <header class="row bg-light">
-                <div class="col">
+                <div class="col-12 col-md-6">
                     <img class="logo" src="./JWDP5/images/logo_mini.png" alt="Logo Orinoco">
                 </div>
-                <nav class="col navbar navbar-expand">
-                    <a class="nav-link" href="pages/panier.html"></a>
+                <nav class="col-12 col-md-6 navbar">
+                    <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Accueil</a>
+                    <a class="nav-link" href="pages/panier.html"><i class="fas fa-shopping-cart"></i> Mon panier</i></i></a>
                 </nav>
             </header>
             <!-- END HEADER -->
 
             <!-- PAGE PRESENTATION -->
             <section class="row">
-                <div class="col">
-                    <h1>SECTION PAGE</h1>
+                <div class="col text-center text-secondary">
+                    <h1>Oribear</h1>
+                    <h2>Choisissez votre ourson, personnalisez-le <br>
+                        100% fait-main
+                    </h2>
                 </div>
             </section>
             <!-- END PAGE PRESENTATION -->
 
             <!-- MAIN -->
-            <main class="row">
-                <div class="col-10 col-md-4">
+            <main class="row d-flex justify-content-center text-center">
+                <article class="col-10 col-md-4">
                     <p>OURS 1</p>
-                </div>
-                <div class="col-10 col-md-4">
+                </article>
+                <article class="col-10 col-md-4">
                     <p>OURS 2</p>
-                </div>
-                <div class="col-10 col-md-4">
+                </article>
+                <article class="col-10 col-md-4">
                     <p>OURS 3</p>
-                </div>
-                <div class="col-10 col-md-4">
+                </article>
+                <article class="col-10 col-md-4">
                     <p>OURS 4</p>
-                </div>
-                <div class="col-10 col-md-4">
+                </article>
+                <article class="col-10 col-md-4">
                     <p>OURS 5</p>
-                </div>
+                </article>
             </main>
             <!-- END MAIN -->
 
             <!-- FOOTER -->
             <footer class="row bg-light">
-                <div class="col">
-                    <p>FOOTER</p>
+                <div class="col-12 col-md-4 text-primary">
+                    <h3 class="text-center">À propos</h3>
+                    <ul>
+                        <li><a href="mailto:contact-oribear@exemple.com">Contact</a></li>
+                        <li><a href="index.html">Mentions légales</a></li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-4 text-primary">
+                    <h3 class="text-center">Sites du groupe Orinoco</h3>
+                    <ul>
+                        <li><a href="index.html">Oribook</a></li>
+                        <li><a href="index.html">Oritextil</a></li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-4 text-primary">
+                    <h3 class="text-center">Communauté</h3>
+                    <ul>
+                        <li><a href="https://fr-fr.facebook.com/">Facebook</a></li>
+                        <li><a href="https://twitter.com/?lang=fr">Twitter</a></li>
+                        <li><a href="https://www.instagram.com/?hl=fr">Instagram</a></li>
+                    </ul>
                 </div>
             </footer>
             <!-- END FOOTER -->
