Mise en page CSS

--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
             <!-- END PAGE PRESENTATION -->
 
             <!-- MAIN -->
-            <main class="row d-flex justify-content-center text-center">
-                <article class="col-10 col-md-4">
+            <main class="row d-flex justify-content-center text-center" id="main-home">
+                <article class="col-10 col-md-5 bg-light">
                     <p>OURS 1</p>
                 </article>
-                <article class="col-10 col-md-4">
+                <article class="col-10 col-md-5 bg-light">
                     <p>OURS 2</p>
                 </article>
-                <article class="col-10 col-md-4">
+                <article class="col-10 col-md-5 bg-light">
                     <p>OURS 3</p>
                 </article>
-                <article class="col-10 col-md-4">
+                <article class="col-10 col-md-5 bg-light">
                     <p>OURS 4</p>
                 </article>
-                <article class="col-10 col-md-4">
+                <article class="col-10 col-md-5 bg-light">
                     <p>OURS 5</p>
                 </article>
             </main>
