--- a/pages/commande.html
+++ b/pages/commande.html
@@ -40,18 +40,18 @@
             <!-- END PAGE PRESENTATION -->
 
             <!-- SECTION REMERCIEMENT -->
-            <section class="row d-flex justify-content-center text-center">
-                <div class="col">
+            <section class="row d-flex justify-content-center text-center" id="commande-thank">
+                <article class="col bg-light">
                     <p>REMERCIEMENTS</p>
-                </div>
+                </article>
             </section>
             <!-- END SECTION REMERCIEMENT -->
 
             <!-- MAIN -->
-            <main class="row d-flex justify-content-center text-center">
-                <div class="col">
+            <main class="row d-flex justify-content-center text-center" id="main-commande">
+                <article class="col bg-light">
                     <p>RECAP COMMANDE</p>
-                </div>
+                </article>
             </main>
             <!-- END MAIN -->
 
