--- a/pages/panier.html
+++ b/pages/panier.html
@@ -40,18 +40,18 @@
             <!-- END PAGE PRESENTATION -->
 
             <!-- MAIN -->
-            <main class="row d-flex justify-content-center text-center">
-                <div class="col">
+            <main class="row d-flex justify-content-center text-center" id="main-panier">
+                <article class="col bg-light">
                     <p>RECAP PANIER</p>
-                </div>
+                </article>
             </main>
             <!-- END MAIN -->
 
             <!-- SECTION FORMULAIRE -->
-            <section class="row">
-                <div class="col">
+            <section class="row d-flex justify-content-center text-center" id="panier-formulaire">
+                <article class="col bg-light">
                     <p>FORMULAIRES</p>
-                </div>
+                </article>
             </section>
             <!-- END SECTION FORMULAIRE -->
 
