--- a/pages/produit.html
+++ b/pages/produit.html
@@ -40,10 +40,10 @@
             <!-- END PAGE PRESENTATION -->
 
             <!-- MAIN -->
-            <main class="row d-flex justify-content-center text-center">
-                <div class="col">
+            <main class="row d-flex justify-content-center text-center" id="main-product">
+                <article class="col bg-light">
                     <p>OURSON SELECTIONNE</p>
-                </div>
+                </article>
             </main>
             <!-- END MAIN -->
 
