--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <!-- HEADER -->
             <header class="row bg-light">
                 <div class="col-12 col-md-6">
-                    <img class="logo" src="./JWDP5/images/logo_mini.png" alt="Logo Orinoco">
+                    <img class="logo" src="./images/logo_mini.png" alt="Logo Orinoco">
                 </div>
                 <nav class="col-12 col-md-6 navbar">
                     <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Accueil</a>
@@ -78,6 +78,8 @@
 
         <!-- Scripts JS --> 
         <script type="text/javascript" src="./js/index.js"></script>
+        <script type="text/javascript" src="./models/Teddy.js"></script>
+        <script type="text/javascript" src="./routes/teddy.js"></script>
         <!-- END Scripts JS -->
     </body>
 
