--- a/pages/commande.html
+++ b/pages/commande.html
@@ -21,7 +21,7 @@
             <!-- HEADER -->
             <header class="row bg-light">
                 <div class="col-12 col-md-6">
-                    <img class="logo" src="../JWDP5/images/logo_mini.png" alt="Logo Orinoco">
+                    <img class="logo" src="../images/logo_mini.png" alt="Logo Orinoco">
                 </div>
                 <nav class="col-12 col-md-6 navbar">
                     <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Accueil</a>
@@ -83,11 +83,11 @@
             <!-- END FOOTER -->
           </div>
 
-        <!-- Scripts JS pour Bootstrap --> 
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <!-- END Scripts JS pour Bootstrap -->
+        <!-- Scripts JS --> 
+        <script type="text/javascript" src="../js/commande.js"></script>
+        <script type="text/javascript" src="../models/Teddy.js"></script>
+        <script type="text/javascript" src="../routes/teddy.js"></script>
+        <!-- END Scripts JS -->
     </body>
 
 </html>
