Ajout lien page produit js + mise en page

--- a/pages/produit.html
+++ b/pages/produit.html
@@ -34,16 +34,14 @@
             <section class="row">
                 <div class="col text-center text-secondary">
                     <h1>Oribear</h1>
-                    <h2 id="teddyName">Rencontrez </h2> <!-- Ajouter nom ours-->
+                    <h2 id="teddyName"></h2> <!-- Ajouter nom ours-->
                 </div>
             </section>
             <!-- END PAGE PRESENTATION -->
 
             <!-- MAIN -->
             <main class="row d-flex justify-content-center text-center" id="main-product">
-                <article class="col bg-light">
-                    <p>OURSON SELECTIONNE</p>
-                </article>
+                    <!-- Ajout card description -->
             </main>
             <!-- END MAIN -->
 
