Résolution appel API

--- a/pages/produit.html
+++ b/pages/produit.html
@@ -24,7 +24,7 @@
                     <img class="logo" src="../images/logo_mini.png" alt="Logo Orinoco">
                 </div>
                 <nav class="col-12 col-md-6 navbar">
-                    <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Accueil</a>
+                    <a class="nav-link" href="../index.html"><i class="fas fa-home"></i> Accueil</a>
                     <a class="nav-link" href="panier.html"><i class="fas fa-shopping-cart"></i> Mon panier</i></a>
                 </nav>
             </header>
@@ -75,8 +75,6 @@
         
         <!-- Scripts JS --> 
         <script type="text/javascript" src="../js/produit.js"></script>
-        <script type="text/javascript" src="../models/Teddy.js"></script>
-        <script type="text/javascript" src="../routes/teddy.js"></script>
         <!-- END Scripts JS -->
     </body>
 
