--- a/pages/panier.html
+++ b/pages/panier.html
@@ -24,7 +24,7 @@
                     <img class="logo" src="../images/logo_mini.png" alt="Logo Orinoco">
                 </div>
                 <nav class="col-12 col-md-6 navbar">
-                    <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Accueil</a>
+                    <a class="nav-link" href="../index.html"><i class="fas fa-home"></i> Accueil</a>
                     <a class="nav-link" href="panier.html"><i class="fas fa-shopping-cart"></i> Mon panier</i></a>
                 </nav>
             </header>
