--- a/pages/panier.html
+++ b/pages/panier.html
@@ -42,16 +42,78 @@
             <!-- MAIN -->
             <main class="row d-flex justify-content-center text-center" id="main-panier">
                 <article class="col bg-light">
-                    <p>RECAP PANIER</p>
+                <h3 class="text-primary">Récapitulatif du panier</h3>
+                    <div class="d-flex flex-row justify-content-around text-primary font-weight-bold my-4">
+                
+                        <h4>Nom</h4>
+                        <h4>Couleur</h4>
+                        <h4>Prix</h4>
+                        <h4>Supprimer</h4>
+
+                    </div>
+
+                    <div id="contenu-panier">
+                        <!-- Ajouter panier via JS -->
+                    </div>
+
+                    <!-- Prix total et vider le panier -->
+                    <div class="d-flex flex-column align-items-end">
+                        <div id="prix-total">
+                            <!-- Ajouter via JS -->
+                        </div>
+
+                        <div id="vider-panier">
+                            <!-- Ajouter via JS -->
+                        </div>
+                    </div>
+
                 </article>
             </main>
             <!-- END MAIN -->
 
             <!-- SECTION FORMULAIRE -->
             <section class="row d-flex justify-content-center text-center" id="panier-formulaire">
-                <article class="col bg-light">
-                    <p>FORMULAIRES</p>
-                </article>
+                <form class="col bg-light p-2 mb-5" id="form">
+                    <h3 class="text-primary">Pour valider votre commande, veuillez remplir les champs ci-dessous :</h3>
+                    <div class="form-row d-flex justify-content-center">
+
+                        <!-- Prénom -->
+                        <div class="col-12 col-md-7 my-4 text-primary font-weight-bold text-left">
+                            <label for="firstName">Prénom :</label>
+                            <input type="text" class="form-control" placeholder="Martin" id="firstName" required>
+                        </div>
+
+                        <!-- Nom -->
+                        <div class="col-12 col-md-7 my-4 text-primary font-weight-bold text-left">
+                            <label for="lastName">Nom :</label>
+                            <input type="text" class="form-control" placeholder="Dupont" id="lastName" required>
+                        </div>
+
+                        <!-- Adresse -->
+                        <div class="col-12 col-md-7 my-4 text-primary font-weight-bold text-left">
+                            <label for="adress">Adresse :</label>
+                            <input type="text" class="form-control" placeholder="1, place Charles de Gaulle" id="adress" required>
+                        </div>
+
+                        <!-- Ville -->
+                        <div class="col-12 col-md-7 my-4 text-primary font-weight-bold text-left">
+                            <label for="city">Ville :</label>
+                            <input type="text" class="form-control" placeholder="Paris" id="city" required>
+                        </div>
+
+                        <!-- E-mail -->
+                        <div class="col-12 col-md-7 my-4 text-primary font-weight-bold text-left">
+                            <label for="email">E-mail :</label>
+                            <input type="text" class="form-control" placeholder="martindupont@exemple.fr" id="email" required>
+                        </div>
+
+                        <!-- Bouton Valider -->
+                        <div class="col-7" id="btn-validation">
+                            <button class="btn btn-info text-primary font-weight-bold my-4">Valider ma commande</button>
+                        </div>
+
+                    </div>
+                </form>
             </section>
             <!-- END SECTION FORMULAIRE -->
 
@@ -85,8 +147,6 @@
         
         <!-- Scripts JS --> 
         <script type="text/javascript" src="../js/panier.js"></script>
-        <script type="text/javascript" src="../models/Teddy.js"></script>
-        <script type="text/javascript" src="../routes/teddy.js"></script>
         <!-- END Scripts JS -->
     </body>
 
