--- a/pages/panier.html
+++ b/pages/panier.html
@@ -45,10 +45,10 @@
                 <h3 class="text-primary">Récapitulatif du panier</h3>
                     <div class="d-flex flex-row justify-content-around text-primary font-weight-bold my-4">
                 
-                        <h4>Nom</h4>
-                        <h4>Couleur</h4>
-                        <h4>Prix</h4>
-                        <h4>Supprimer</h4>
+                        <h4 class="col-md-2">Nom</h4>
+                        <h4 class="col-md-2">Couleur</h4>
+                        <h4 class="col-md-2">Prix</h4>
+                        <h4><i class="fas fa-trash-alt"></i></h4>
 
                     </div>
 
@@ -57,7 +57,7 @@
                     </div>
 
                     <!-- Prix total et vider le panier -->
-                    <div class="d-flex flex-column align-items-end">
+                    <div class="d-flex flex-column align-items-center flex-md-row justify-content-md-around">
                         <div id="prix-total">
                             <!-- Ajouter via JS -->
                         </div>
