--- a/pages/panier.html
+++ b/pages/panier.html
@@ -91,8 +91,8 @@
 
                         <!-- Adresse -->
                         <div class="col-12 col-md-7 my-4 text-primary font-weight-bold text-left">
-                            <label for="adress">Adresse :</label>
-                            <input type="text" class="form-control" placeholder="1, place Charles de Gaulle" id="adress" required>
+                            <label for="address">Adresse :</label>
+                            <input type="text" class="form-control" placeholder="1, place Charles de Gaulle" id="address" required>
                         </div>
 
                         <!-- Ville -->
@@ -104,7 +104,7 @@
                         <!-- E-mail -->
                         <div class="col-12 col-md-7 my-4 text-primary font-weight-bold text-left">
                             <label for="email">E-mail :</label>
-                            <input type="text" class="form-control" placeholder="martindupont@exemple.fr" id="email" required>
+                            <input type="email" class="form-control" placeholder="martindupont@exemple.fr" id="email" required>
                         </div>
 
                         <!-- Bouton Valider -->
