--- a/pages/commande.html
+++ b/pages/commande.html
@@ -41,8 +41,15 @@
 
             <!-- SECTION REMERCIEMENT -->
             <section class="row d-flex justify-content-center text-center" id="commande-thank">
-                <article class="col bg-light">
-                    <p>REMERCIEMENTS</p>
+                <article class="col bg-light text-primary">
+                    <h3>Oribear vous remercie pour votre achat !</h3>
+                    <div id="remerciements">
+                        <p>Nous avons le plaisir de vous informer que votre commande a bien été enregistrée. <br>
+                        Vous allez recevoir un e-mail de confirmation où vous trouverez un lien pour suivre votre livraison.</p>
+                        <p>Pour toute communication avec nos services, merci de noter votre numéro de commande.</p>
+                        <p>Nous espèrons vous revoir très bientôt !</p>
+                        <p>Toute l'équipe d'Oribear <i class="fas fa-paw"></i></p>
+                    </div>
                 </article>
             </section>
             <!-- END SECTION REMERCIEMENT -->
