--- a/pages/commande.html
+++ b/pages/commande.html
@@ -43,7 +43,7 @@
             <section class="row d-flex justify-content-center text-center" id="commande-thank">
                 <article class="col bg-light text-primary">
                     <h3>Oribear vous remercie pour votre achat !</h3>
-                    <div id="remerciements">
+                    <div class="commande-p">
                         <p>Nous avons le plaisir de vous informer que votre commande a bien été enregistrée. <br>
                         Vous allez recevoir un e-mail de confirmation où vous trouverez un lien pour suivre votre livraison.</p>
                         <p>Pour toute communication avec nos services, merci de noter votre numéro de commande.</p>
@@ -56,9 +56,7 @@
 
             <!-- MAIN -->
             <main class="row d-flex justify-content-center text-center" id="main-commande">
-                <article class="col bg-light">
-                    <p>RECAP COMMANDE</p>
-                </article>
+            <!-- Ajouter via JS -->
             </main>
             <!-- END MAIN -->
 
@@ -92,8 +90,6 @@
 
         <!-- Scripts JS --> 
         <script type="text/javascript" src="../js/commande.js"></script>
-        <script type="text/javascript" src="../models/Teddy.js"></script>
-        <script type="text/javascript" src="../routes/teddy.js"></script>
         <!-- END Scripts JS -->
     </body>
 
