--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <nav class="col-12 col-md-6 navbar">
                     <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Accueil</a>
-                    <a class="nav-link" href="pages/panier.html"><i class="fas fa-shopping-cart"></i> Mon panier</i></i></a>
+                    <a class="nav-link" href="pages/panier.html"><i class="fas fa-shopping-cart"></i> Mon panier</a>
                 </nav>
             </header>
             <!-- END HEADER -->
@@ -77,7 +77,7 @@
         
 
         <!-- Scripts JS --> 
-        <script type="text/javascript" src="./js/index.js"></script>
+        <script src="./js/index.js"></script>
         <!-- END Scripts JS -->
     </body>
 
