--- a/pages/commande.html
+++ b/pages/commande.html
@@ -25,7 +25,7 @@
                 </div>
                 <nav class="col-12 col-md-6 navbar">
                     <a class="nav-link" href="../index.html"><i class="fas fa-home"></i> Accueil</a>
-                    <a class="nav-link" href="panier.html"><i class="fas fa-shopping-cart"></i> Mon panier</i></a>
+                    <a class="nav-link" href="panier.html"><i class="fas fa-shopping-cart"></i> Mon panier</a>
                 </nav>
             </header>
             <!-- END HEADER -->
@@ -40,7 +40,7 @@
             <!-- END PAGE PRESENTATION -->
 
             <!-- SECTION REMERCIEMENT -->
-            <section class="row d-flex justify-content-center text-center" id="commande-thank">
+            <div class="row d-flex justify-content-center text-center" id="commande-thank">
                 <article class="col bg-light text-primary">
                     <h3>Oribear vous remercie pour votre achat !</h3>
                     <div class="commande-p">
@@ -51,7 +51,7 @@
                         <p>Toute l'équipe d'Oribear <i class="fas fa-paw"></i></p>
                     </div>
                 </article>
-            </section>
+            </div>
             <!-- END SECTION REMERCIEMENT -->
 
             <!-- MAIN -->
@@ -89,7 +89,7 @@
           </div>
 
         <!-- Scripts JS --> 
-        <script type="text/javascript" src="../js/commande.js"></script>
+        <script src="../js/commande.js"></script>
         <!-- END Scripts JS -->
     </body>
 
