--- a/pages/produit.html
+++ b/pages/produit.html
@@ -25,7 +25,7 @@
                 </div>
                 <nav class="col-12 col-md-6 navbar">
                     <a class="nav-link" href="../index.html"><i class="fas fa-home"></i> Accueil</a>
-                    <a class="nav-link" href="panier.html"><i class="fas fa-shopping-cart"></i> Mon panier</i></a>
+                    <a class="nav-link" href="panier.html"><i class="fas fa-shopping-cart"></i> Mon panier</a>
                 </nav>
             </header>
             <!-- END HEADER -->
@@ -74,7 +74,7 @@
           </div>
         
         <!-- Scripts JS --> 
-        <script type="text/javascript" src="../js/produit.js"></script>
+        <script src="../js/produit.js"></script>
         <!-- END Scripts JS -->
     </body>
 
